# shaper_study

./: CMakeLists.txt  README  SalomeSHAPERSTUDYConfig.cmake.in
adm_local/: CMakeLists.txt
adm_local/cmake_files/: CMakeLists.txt  FindSalomeSHAPERSTUDY.cmake
adm_local/unix/config_files/: CMakeLists.txt  check_SHAPERSTUDY.m4
idl/: CMakeLists.txt  SHAPERSTUDY_Gen.idl
resources/: CMakeLists.txt  SHAPERSTUDYCatalog.xml.in  SHAPERSTUDY_images.ts  SalomeApp.xml.in
src/: CMakeLists.txt
src/CXX/: CMakeLists.txt
src/PY/: CMakeLists.txt  SHAPERSTUDY.py  SHAPERSTUDY_Field.py  SHAPERSTUDY_IOperations.py  SHAPERSTUDY_Object.py  SHAPERSTUDY_utils.py  shaperBuilder.py
src/SWIG/: CMakeLists.txt  StudyData_Swig.i
src/SalomeSessionless/: CMakeLists.txt  SHAPERSTUDY_SalomeSessionless.py
src/StudyData/: CMakeLists.txt  StudyData.h  StudyData_Object.cpp  StudyData_Object.h  StudyData_Operation.cpp  StudyData_Operation.h  StudyData_XAO.cpp  StudyData_XAO.h
test/: test0.py  testBuilder.py
